# cups-printers

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
cups_printers/: __init__.py  cli.py  config.py  const.py  constants.py  main.py
cups_printers/commands/: __init__.py  output.py  queue.py  state.py
cups_printers/plugins/: output.py  queue.py  state.py
